# mach_eight_challenge

./: README.md  main.py  pyproject.toml
mach_eight_challenge/: find_pairs.py
tests/: test_find_pairs.py
