[tool.poetry]
name = "mach-eight-challenge"
version = "0.1.0"
description = ""
authors = ["Christhian Guevara <christhianjesus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
